# detecta_movimento

./: README.md  pyproject.toml
detect_mov/: comparativo.csv  comparativo_desempenho.py  filtro_mediana_temp.ipynb  filtro_mediana_temp.py
