[tool.poetry]
name = "detect-mov"
version = "0.1.0"
description = ""
authors = ["Gabryel Guedes <gabryelsguedes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
opencv-contrib-python = "^4.9.0.80"
matplotlib = "^3.9.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
